# leasing

./: .env.example  .gitignore  CLAUDE.md  N8N.txt  README.md  ameliorations-v2.md  architecture.md  dataset-stats.md  decisions.md  dossier-formats-par-marque.md  glossaire.md  phase-0-setup.md  phase-1-extraction-dataset.md  pyproject.toml  roadmap.md  ruff.toml
app/: __init__.py  config.py  main.py
app/api/: dependencies.py
app/api/routes/: analyze.py  health.py
app/core/: analyze.py  refus_office.py  verification.py  verification_rules.py
app/models/: analyze.py  anomalie.py  document.py  email.py  opportunity.py  refus_office.py  verdict.py
app/services/: email_routing.py  gemini_client.py  salesforce_client.py  supabase_client.py
app/utils/: logging.py
memory/: MEMORY.md  feedback_etude_avant_code.md  feedback_workflow.md  project_ameliorations_v2.md  project_anomalies_v1.md  project_auth_dashboard.md  project_champs_sf.md  project_dashboard_comptable.md  project_dashboard_pdf_preview.md  project_defense_profondeur.md  project_destinataires_mails.md  project_docs_non_requis.md  project_human_in_the_loop.md  project_leasing.md  project_mail_override_test.md  project_re_analyses.md  project_refus_office.md  project_siege_invalide.md  project_typage_pieces_sf.md  reference_n8n_v1.md  user_role.md
previews/: mail_dossier_a_corriger.html  mail_rappel_quotidien.html
scripts/: analyze_dataset.py  extract_won_dossiers.py  seed_concessions.py
scripts/migrations/: 001_init_schema.sql  002_validations.sql
tests/unit/: test_analyze_endpoint.py  test_email_routing.py  test_gemini_client.py  test_health.py  test_refus_office.py  test_salesforce_client.py  test_supabase_client.py  test_verification.py
